syntax = "proto3";

option csharp_namespace = "Services.Identity.API.Grpc";

package medion.identity.v1;

service TokenVerification {
  rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse);
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool is_valid = 1;
  string user_id = 2;
  string user_name = 3;
  string email = 4;
  repeated string roles = 5;
  repeated string permissions = 6;
}
